[package]
name = "ethereum-types"
version = "0.4.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
homepage = "https://github.com/paritytech/primitives"
description = "Ethereum types"

[target.'cfg(not(target_env = "sgx"))'.dependencies.serde]
git = "https://github.com/baidu/rust-sgx-sdk.git"
rev = "v1.0.4"
optional = true

[dependencies]
crunchy = "0.1"
ethbloom = { path = "../ethbloom", version = "0.5.0", default-features = false }
ethereum-types-serialize = { version = "0.2.1", path = "../serialize", optional = true }
fixed-hash = { version = "0.2", default_features = false }
uint = { version = "0.4", default_features = false }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std", "heapsizeof", "serialize"]
std = ["uint/std", "fixed-hash/std", "ethbloom/std"]
heapsizeof = ["uint/heapsizeof", "fixed-hash/heapsizeof", "ethbloom/heapsizeof"]
serialize = ["std", "ethereum-types-serialize", "serde", "ethbloom/serialize"]
